Added possibility to add settings to MegaNav

--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Css/editor.less
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Css/editor.less
@@ -12,6 +12,21 @@
     }
 }
 
+/* Fade unpublished items and add red border to show difference with unpublished items */
+.umb-node-preview--navihide {
+    opacity: .5;
+    border: 1px dotted red;
+
+    + .angular-ui-tree-nodes {
+        opacity: .5;
+    }
+}
+
+/* Fade unpublished items and add red border to show difference with unpublished items on hover as well */
+.umb-node-preview--sortable.umb-node-preview--navihide:hover {
+    border-color: red;
+}
+
 /* Angular UI Tree */
 .angular-ui-tree-nodes {
     position: relative;
