--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/editor.html
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/editor.html
@@ -14,10 +14,10 @@
         </div>
 
         <!-- add nav items -->
-        <a href="" class="umb-node-preview-add" ng-click="openLinkPicker()" prevent-default>
+        <a href="" class="umb-node-preview-add" ng-click="add()" prevent-default>
             <localize key="general_add">Add</localize>
         </a>
-
+        
     </ng-form>
 
     <!-- repeatable nav item template -->
@@ -30,7 +30,7 @@
             <div class="umb-node-preview__content">
 
                 <div class="umb-node-preview__name">
-                    {{item.title}}
+                    {{item.title || item.name}}
                 </div>
 
                 <div class="umb-node-preview__description">
@@ -63,10 +63,10 @@
 
     </script>
 
-    <!-- content picker overlay -->
-    <umb-overlay ng-if="contentPickerOverlay.show"
-                 model="contentPickerOverlay"
-                 view="contentPickerOverlay.view"
+    <!-- nav item settings overlay -->
+    <umb-overlay ng-if="settingsOverlay.show"
+                 model="settingsOverlay"
+                 view="settingsOverlay.view"
                  position="right">
     </umb-overlay>
 
