Fixing validation on nav item settings

--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
@@ -9,7 +9,7 @@
                class="umb-editor umb-textstring"
                ng-model="target.url"
                ng-disabled="target.id"
-               ng-required="!target.id" />
+               ng-required="!target.url" />
 
     </umb-control-group>
 
@@ -24,7 +24,7 @@
                placeholder="@placeholders_entername"
                class="umb-editor umb-textstring"
                ng-model="target.title"
-               ng-required="!target.id" />
+               ng-required="!target.name" />
 
     </umb-control-group>
 
