Improve field styling

--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="Cogworks.Meganav.MeganavSettingsController" class="umb-overlay-body">
+﻿<div ng-controller="Cogworks.Meganav.MeganavSettingsController" class="umb-overlay-body umb-modal">
 
     <umb-control-group label="@content_urls">
 
