Add support for custom properties, with the option to specify which level of depth they should appear at. Heavily based off the fork from @ArnoldV with some shiny new features

--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/editor.html
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/editor.html
@@ -3,7 +3,7 @@
     <ng-form name="meganavEditorForm">
 
         <!-- meganav sortable tree -->
-        <div ui-tree data-max-depth="{{model.config.maxDepth}}">
+        <div ui-tree="treeOptions" data-max-depth="{{model.config.maxDepth}}">
 
             <ol ui-tree-nodes ng-model="items">
 
