--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
@@ -13,6 +13,7 @@
 
     </umb-control-group>
 
+
     <umb-control-group label="@content_nodeName">
 
         <p ng-if="target.name">
@@ -28,6 +29,7 @@
 
     </umb-control-group>
 
+
     <umb-control-group label="@content_target">
 
         <select class="umb-editor umb-dropdown" ng-model="target.target">
@@ -39,22 +41,25 @@
 
     </umb-control-group>
 
-    <umb-tree-search-box hide-search-callback="hideSearch"
-                         search-callback="onSearchResults"
-                         search-from-id="{{searchInfo.searchFromId}}"
-                         search-from-name="{{searchInfo.searchFromName}}"
-                         show-search="{{searchInfo.showSearch}}"
-                         section="{{section}}">
-    </umb-tree-search-box>
 
-    <br />
+    <umb-control-group label="Content">
 
-    <umb-tree-search-results ng-if="searchInfo.showSearch"
-                             results="searchInfo.results"
-                             select-result-callback="selectResult">
-    </umb-tree-search-results>
+      <umb-tree-search-box hide-search-callback="hideSearch"
+                           search-callback="onSearchResults"
+                           search-from-id="{{searchInfo.searchFromId}}"
+                           search-from-name="{{searchInfo.searchFromName}}"
+                           show-search="{{searchInfo.showSearch}}"
+                           section="{{section}}">
+      </umb-tree-search-box>
 
-    <div ng-hide="searchInfo.showSearch">
+      <br />
+
+      <umb-tree-search-results ng-if="searchInfo.showSearch"
+                               results="searchInfo.results"
+                               select-result-callback="selectResult">
+      </umb-tree-search-results>
+
+      <div ng-hide="searchInfo.showSearch">
 
         <umb-tree section="content"
                   hideheader="true"
@@ -64,6 +69,12 @@
                   enablecheckboxes="true">
         </umb-tree>
 
-    </div>
+      </div>
+
+    </umb-control-group>
+
+    <umb-property property="val" ng-repeat="val in model.properties">
+      <umb-property-editor model="val" is-pre-value="true"></umb-property-editor>
+    </umb-property>
 
 </div>
