Including visual indicator of umbracoNaviHide items in the backoffice

--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Css/editor.css
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Css/editor.css
@@ -2,12 +2,20 @@
 .umb-node-preview-add {
   max-width: 100%;
 }
-/* Fade unpublished items */
-.umb-node-preview--unpublished {
+/* Fade unpublished and hidden items */
+.umb-node-preview--unpublished,
+.umb-node-preview--navihide {
   opacity: .5;
 }
-.umb-node-preview--unpublished + .angular-ui-tree-nodes {
+.umb-node-preview--unpublished + .angular-ui-tree-nodes,
+.umb-node-preview--navihide + .angular-ui-tree-nodes {
   opacity: .5;
+}
+/* Highlight hidden items */
+.umb-node-preview--navihide,
+.umb-node-preview--navihide:hover {
+  border: 1px dotted;
+  border-color: red;
 }
 /* Angular UI Tree */
 .angular-ui-tree-nodes {
