--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
@@ -8,7 +8,7 @@
                placeholder="@general_url"
                class="umb-editor umb-textstring"
                ng-model="target.url"
-               ng-disabled="target.id"
+               ng-disabled="target.udi"
                ng-required="!target.url" />
 
     </umb-control-group>
