--- a/src/Cogworks.Meganav/Web/UI/Views/Partials/ExampleNavigation.cshtml
+++ b/src/Cogworks.Meganav/Web/UI/Views/Partials/ExampleNavigation.cshtml
@@ -1,23 +1,23 @@
 ﻿@using Cogworks.Meganav.Models
-@model IEnumerable<MeganavItem>
+@model IEnumerable<IMeganavItem>
 
-@RenderNavigation(Model)
+    @RenderNavigation(Model)
 
-@helper RenderNavigation(IEnumerable<MeganavItem> items)
-{
-    if (items.Any())
+    @helper RenderNavigation(IEnumerable<IMeganavItem> items)
     {
-        <ul>
-            @foreach (var item in items)
-            {
-                <li>
-                    <a href="@item.Url" target="@item.Target">
-                        @item.Title (Level: @item.Level)
-                    </a>
+        if (items.Any())
+        {
+            <ul>
+                @foreach (var item in items)
+                {
+                    <li>
+                        <a href="@item.Url" target="@item.Target">
+                            @item.Title (Level: @item.Level)
+                        </a>
 
-                    @RenderNavigation(item.Children)
-                </li>
-            }
-        </ul>
+                        @RenderNavigation(item.Children)
+                    </li>
+                }
+            </ul>
+        }
     }
-}
