--- a/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
+++ b/src/Cogworks.Meganav/Web/UI/App_Plugins/Meganav/Views/settings.html
@@ -1,76 +1,73 @@
-﻿<div ng-controller="Cogworks.Meganav.MeganavSettingsController" class="umb-overlay-body umb-modal">
+﻿<div LinkPickerController ng-controller="Cogworks.Meganav.MeganavSettingsController">
+    <div class="umb-panel-body no-header">
+        <umb-pane>
+            <umb-control-group label="@defaultdialogs_urlLinkPicker" class="umb-property--pull">
+                <input type="text"
+                       localize="placeholder"
+                       placeholder="@general_url"
+                       class="umb-editor umb-textstring"
+                       ng-model="target.url"
+                       ng-disabled="target.id || target.udi" />
+            </umb-control-group>
 
-    <umb-control-group label="@content_urls">
+            <umb-control-group label="@defaultdialogs_anchorLinkPicker" class="umb-property--push">
+                <input type="text"
+                       list="anchors"
+                       localize="placeholder"
+                       placeholder="@placeholders_anchor"
+                       class="umb-editor umb-textstring"
+                       ng-model="target.anchor" />
 
-        <input type="text"
-               name="linkUrl"
-               localize="placeholder"
-               placeholder="@general_url"
-               class="umb-editor umb-textstring"
-               ng-model="target.url"
-               ng-disabled="target.udi"
-               ng-required="!target.url" />
+                <datalist id="anchors">
+                    <option value="{{a}}" ng-repeat="a in anchorValues"></option>
+                </datalist>
+            </umb-control-group>
 
-    </umb-control-group>
+            <umb-control-group label="@defaultdialogs_nodeNameLinkPicker">
+                <input type="text"
+                       localize="placeholder"
+                       placeholder="@placeholders_entername"
+                       class="umb-editor umb-textstring"
+                       ng-model="target.name" />
+            </umb-control-group>
 
+            <umb-control-group label="@content_target">
+                <select class="umb-editor umb-dropdown" ng-model="target.target">
+                    <option value=""></option>
+                    <option value="_blank"><localize key="defaultdialogs_openInNewWindow">Opens the linked document in a new window or tab</localize></option>
+                </select>
+            </umb-control-group>
 
-    <umb-control-group label="@content_nodeName">
-
-        <input type="text"
-               localize="placeholder"
-               placeholder="@placeholders_entername"
-               class="umb-editor umb-textstring"
-               ng-model="target.title"
-               ng-required="!target.name" />
-
-    </umb-control-group>
-
-
-    <umb-control-group label="@content_target">
-
-        <select class="umb-editor umb-dropdown" ng-model="target.target">
-            <option value=""></option>
-            <option value="_blank">Opens the linked document in a new window or tab</option>
-            <option value="_top">Opens the linked document in the full body of the window</option>
-            <option value="_parent">Opens the linked document in the parent frame</option>
-        </select>
-
-    </umb-control-group>
-
-
-    <umb-control-group label="Content">
-
-        <umb-tree-search-box hide-search-callback="hideSearch"
-                             search-callback="onSearchResults"
-                             search-from-id="{{searchInfo.searchFromId}}"
-                             search-from-name="{{searchInfo.searchFromName}}"
-                             show-search="{{searchInfo.showSearch}}"
-                             section="{{section}}">
-        </umb-tree-search-box>
-
-        <br />
-
-        <umb-tree-search-results ng-if="searchInfo.showSearch"
-                                 results="searchInfo.results"
-                                 select-result-callback="selectResult">
-        </umb-tree-search-results>
-
-        <div ng-hide="searchInfo.showSearch">
-
-            <umb-tree section="content"
-                      hideheader="true"
-                      hideoptions="true"
-                      eventhandler="dialogTreeEventHandler"
-                      isdialog="true"
-                      enablecheckboxes="true">
-            </umb-tree>
-
-        </div>
-
-    </umb-control-group>
-
-    <umb-property property="val" ng-repeat="val in model.properties">
-        <umb-property-editor model="val" is-pre-value="true"></umb-property-editor>
-    </umb-property>
-
+            <umb-control-group>
+                <umb-tree-search-box hide-search-callback="hideSearch"
+                                     search-callback="onSearchResults"
+                                     search-from-id="{{searchInfo.searchFromId}}"
+                                     search-from-name="{{searchInfo.searchFromName}}"
+                                     show-search="{{searchInfo.showSearch}}"
+                                     section="{{section}}">
+                </umb-tree-search-box>
+                <umb-tree-search-results ng-if="searchInfo.showSearch"
+                                         results="searchInfo.results"
+                                         select-result-callback="selectResult">
+                </umb-tree-search-results>
+            </umb-control-group>
+            <umb-control-group>
+                <div ng-hide="searchInfo.showSearch">
+                    <umb-tree section="content"
+                              hideheader="true"
+                              hideoptions="true"
+                              eventhandler="dialogTreeEventHandler"
+                              isdialog="true"
+                              enablecheckboxes="true">
+                    </umb-tree>
+                </div>
+            </umb-control-group>
+            <umb-control-group>
+            <umb-property property="val" ng-repeat="val in model.properties">
+                <umb-property-editor model="val" is-pre-value="true"></umb-property-editor>
+            </umb-property>
+            </umb-control-group>
+        </umb-pane>
+    </div>
 </div>
+
