--- a/src/Cogworks.Meganav/Web/UI/Views/Partials/ExampleNavigation.cshtml
+++ b/src/Cogworks.Meganav/Web/UI/Views/Partials/ExampleNavigation.cshtml
@@ -12,7 +12,7 @@
             {
                 <li>
                     <a href="@item.Url" target="@item.Target">
-                        @item.Title (Level: @item.Level)
+                        @item.Name (Level: @item.Level)
                     </a>
 
                     @RenderNavigation(item.Children)
